k8s/base/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-frontend-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receipt-frontend
      env: green
  template:
    metadata:
      labels:
        app: receipt-frontend
        env: green
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "22137"
    spec:
      containers:
      - name: receipt-frontend
        image: venkatakurathitud/receipt-frontend:${SHORT_SHA}
        ports:
        - containerPort: 22137
        livenessProbe:
          httpGet:
            path: /
            port: 22137
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 22137
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
