k8s/base/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: receipt-frontend-service
# spec:
#   selector:
#     app: receipt-frontend
#   ports:
#     - port: 80
#       targetPort: 22137
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: receipt-frontend-service
  labels:
    app: receipt-frontend
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 22137
  selector:
    app: receipt-frontend
